--- a/internal/server/ui/components/header/component.templ
+++ b/internal/server/ui/components/header/component.templ
@@ -9,6 +9,7 @@ templ Component() {
 		<script src="/public/vendor/jquery/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="></script>
 		<script src="/public/vendor/toastr/toastr.js"></script>
 		<script src="/public/scripts/toastr-init.js"></script>
+		<script src="/public/scripts/observability.js"></script>
 		<script src="/public/vendor/prometheus-query/prometheus-query.umd.min.js"></script>
 		<script src="/public/vendor/chartjs/chart.umd.min.js"></script>
 		<script src="/public/vendor/chartjs/chartjs-adapter-date-fns.bundle.min.js"></script>
