153: Add some signals and refactor API
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/internal/server/public/styles/site.css
+++ b/internal/server/public/styles/site.css
@@ -1,25 +1,27 @@
 /* Import order matters for CSS cascade */
 @import url('variables.css');
 @import url('reset.css');
-@import url('forms.css');
-@import url('layout.css');
-@import url('navigation.css');
+/* Order of imports below is not important */
+@import url('books.css');
 @import url('buttons.css');
-@import url('icons.css');
+@import url('calendar.css');
+@import url('devices.css');
+@import url('editor.css');
+@import url('file-explorer.css');
+@import url('forms.css');
 @import url('hero.css');
+@import url('icons.css');
 @import url('landing.css');
+@import url('layout.css');
+@import url('modals.css');
+@import url('navigation.css');
+@import url('observability.css');
+@import url('photos.css');
 @import url('storage_bar.css');
 @import url('storage_partition.css');
-@import url('devices.css');
-@import url('file-explorer.css');
-@import url('calendar.css');
-@import url('photos.css');
-@import url('books.css');
-@import url('modals.css');
-@import url('utility.css');
-@import url('touch-feedback.css');
-@import url('editor.css');
 @import url('toastr.css');
+@import url('touch-feedback.css');
+@import url('utility.css');
 
 /* Inline rename/move form - Used in file explorer for renaming files inline */
 .ab-rename-overlay {
