fix image preview on column mode, mobile preview access

--- a/internal/server/ui/components/file_explorer/grid_view/component.templ
+++ b/internal/server/ui/components/file_explorer/grid_view/component.templ
@@ -41,6 +41,7 @@ templ renderGridItem(pageState types.PageState, file fs.FileInfo) {
 		oncontextmenu="toggleFloatingContextMenu(event, this)"
 		onclick="handleFileNodeClick(event, this)"
 		ondblclick="handleFileNodeDoubleClick(event, this)"
+		ontouchend="handleFileNodeTouch(event, this)"
 	>
 		if isFolder {
 			<div
